--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.6",
     "framer-motion": "^10.12.4",
+    "install": "^0.13.0",
+    "npm": "^9.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.10.0",
