--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,10 @@
     "npm": "^9.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.3",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
+    "react-scrollable-feed": "^1.3.2",
     "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4"
   },
